force-app/main/default/objects/EstruturaProduto__c/EstruturaProduto__c.object-meta.xml
<CustomObject>
    <label>Estrutura de Produto</label>
    <nameField>
        <label>Estrutura de Produto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estrutura de Produto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>