force-app/main/default/objects/EstruturaProduto__c/fields/Agrupador__c.field-meta.xml
<CustomField>
    <fullName>Agrupador__c</fullName>
    <label>Agrupador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ferramenta de Automação</fullName>
            </value>
            <value>
                <fullName>Foco XLED</fullName>
            </value>
            <value>
                <fullName>Esterilizadora</fullName>
                <isActive>false</isActive>
                <label>Esterilizadora</label>
            </value>
            <value>
                <fullName>Lavadora</fullName>
                <isActive>false</isActive>
                <label>Lavadora</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>