force-app/main/default/objects/EstruturaProduto__c/fields/CodigoInterno__c.field-meta.xml
<CustomField>
    <fullName>CodigoInterno__c</fullName>
    <externalId>true</externalId>
    <label>Codigo Interno</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>