force-app/main/default/objects/EstruturaProduto__c/fields/ImagemProduto__c.field-meta.xml
<CustomField>
    <fullName>ImagemProduto__c</fullName>
    <label>Imagem do Produto</label>
    <type>Url</type>
</CustomField>