force-app/main/default/objects/EstruturaProduto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ativo__c</columns>
    <columns>Agrupador__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>